# arcaptcha

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  ui.aseprite
arcaptcha/: Dockerfile  __init__.py  app.py  catalog.py  cli.py  config.py  daily_runtime.py  edition.py  environment_sync.py
arcaptcha/content/: games.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/licenses/: av05-logotype-license.txt
web/public/: THIRD_PARTY_LICENSES.txt
web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
web/src/components/: ActionConsole.tsx  Console.tsx  ConwayBackground.tsx  GridFrame.tsx
web/src/firmware/: Firmware.ts  GameEnvironment.ts  font.ts  framebuffer.ts  os.ts  palette.ts  sprites.ts
web/src/firmware/scenes/: about.ts  base.ts  error.ts  help.ts  index.ts  play.ts  win.ts
web/src/lib/: api.ts  storage.ts
