[project]
name = "arcaptcha"
version = "0.1.0"
description = "A daily browser microgame built on ARC-AGI-3 environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["arc-agi>=0.9.6", "waitress>=3.0.2"]

[project.scripts]
arcaptcha = "arcaptcha.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
